--- a/app/src/main/res/layout/fragment_to_do_list.xml
+++ b/app/src/main/res/layout/fragment_to_do_list.xml
@@ -28,6 +28,7 @@
             android:src="@android:drawable/ic_input_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:focusable="true" />
+            android:focusable="true"
+            android:contentDescription="Todo Action"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
