--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,5 +18,9 @@
         android:id="@+id/newToDoFragment"
         android:name="com.example.kotlinbasic.newToDoFragment"
         android:label="fragment_new_to_do"
-        tools:layout="@layout/fragment_new_to_do" />
+        tools:layout="@layout/fragment_new_to_do" >
+        <action
+            android:id="@+id/action_newToDoFragment_to_toDoListFragement"
+            app:destination="@id/toDoListFragement" />
+    </fragment>
 </navigation>
