--- a/app/src/main/res/layout/fragment_to_do_list.xml
+++ b/app/src/main/res/layout/fragment_to_do_list.xml
@@ -29,6 +29,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:focusable="true"
-            android:contentDescription="Todo Action"/>
+            android:contentDescription="@string/todo_action"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
